--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -17,7 +17,6 @@
    "source": [
     "#| export\n",
     "from functools import wraps\n",
-    "from uuid import uuid4\n",
     "from dataclasses import dataclass\n",
     "from fasthtml.common import *\n",
     "from fasthtml.jupyter import JupyUvi, HTMX\n",
@@ -32,11 +31,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "@dataclass\n",
     "class User:\n",
     "    uid: str\n",
-    "    name: str\n"
+    "    name: str\n",
+    "    filename: Optional[str] = None\n",
+    "\n",
+    "    async def set_picture(self, file: UploadFile, content_path='./user-content'):\n",
+    "        fname = self.uid + '.'+file.filename.split('.')[-1]\n",
+    "        dir = Path(content_path)\n",
+    "        dir.mkdir(parents=True, exist_ok=True)\n",
+    "        with open(dir/fname, 'wb') as f: f.write(await file.read())\n",
+    "        self.filename = str(fname)\n",
+    "\n",
+    "    def reset_picture(self, content_path='./user-content'):\n",
+    "        path = Path(content_path)/self.filename\n",
+    "        path.unlink(missing_ok=True)\n",
+    "        self.filename = None"
    ]
   },
   {
@@ -49,7 +61,7 @@
     "@fc.delegates(Database)\n",
     "def init_db(filename_or_conn=':memory:', **kwargs):\n",
     "    db = Database(filename_or_conn, **kwargs)\n",
-    "    db.create(User, pk='uid')\n",
+    "    db.create(User, pk='uid', transform=True)\n",
     "    db.t.user.cls = User\n",
     "    return db"
    ]
@@ -65,7 +77,7 @@
     "    def __post_init__(self): self.users: fl.Table = self.db.t.user\n",
     "    \n",
     "    def create(self, uid: str=None, name: str = 'null'):\n",
-    "        u = User(uid or str(uuid4()), name)\n",
+    "        u = User(uid or random_id(), name)\n",
     "        self.users.insert(u)\n",
     "        return u\n",
     "    \n",
@@ -74,7 +86,7 @@
     "    \n",
     "    def get_or_create(self, sess: dict, name: str = 'null') -> User:\n",
     "        sess = sess['session'] if 'session' in sess else sess\n",
-    "        uid = sess.setdefault('uid', str(uuid4()))\n",
+    "        uid = sess.setdefault('uid', random_id())\n",
     "        if uid in self.users: return self.users[uid]\n",
     "        return self.create(uid, name)"
    ]
@@ -88,7 +100,7 @@
     "#| export\n",
     "def user_beforeware(manager: UserManager, skip=None):\n",
     "    '''Makes sure that request always contains valid user'''\n",
-    "    def before(req: Request): req.state.user = manager.get_or_create(req)\n",
+    "    def before(req: Request): req.state.user = manager.get_or_create(req.session)\n",
     "    return Beforeware(before, skip)"
    ]
   },
@@ -100,8 +112,9 @@
    "source": [
     "# | export\n",
     "\n",
-    "def UserName(u: User, cls='username', **kwargs):\n",
-    "    return Span(u.name, dt_user = u.uid, cls=cls, **kwargs, hx_swap_oob=f'outerHTML:span[dt-user=\"{u.uid}\"]')\n",
+    "def UserName(u: User, is_connected=True, cls='username', **kwargs):\n",
+    "    cls += ' muted' if not is_connected else ''\n",
+    "    return Span(u.name, dt_user = u.uid, cls=cls, **kwargs, hx_swap_oob=f\"outerHTML:span[dt-user='{u.uid}']\")\n",
     "\n",
     "def NameSetting():\n",
     "    return Div(\n",
