project restructuring, styles, support for avatars

--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | default_exp lobby"
+    "# | default_exp common.lobby"
    ]
   },
   {
@@ -23,8 +23,8 @@
     "import random, string\n",
     "import fastcore.all as fc\n",
     "from fasthtml.common import *\n",
-    "from meme_games.utils import *\n",
-    "from meme_games.user import *"
+    "from meme_games.common.utils import *\n",
+    "from meme_games.common.user import *"
    ]
   },
   {
@@ -48,11 +48,14 @@
     "@dataclass\n",
     "class BaseLobbyMember:\n",
     "    user: User\n",
+    "    is_player: bool = False\n",
     "    ws: Optional[FunctionType] = None\n",
     "    joined_at: dt.datetime = field(default_factory=dt.datetime.now)\n",
     "    score: int = 0\n",
     "\n",
     "    def __getattr__(self, name): return getattr(self.user, name)\n",
+    "    def spectate(self): self.is_player = False\n",
+    "    def play(self): self.is_player = True\n",
     "    def connect(self, ws: FunctionType): self.ws = ws\n",
     "    def disconnect(self): self.ws = None\n",
     "    def add_score(self, score: int): self.score += score\n",
