--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp user"
+    "#| default_exp common.user"
    ]
   },
   {
@@ -16,13 +16,14 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "import time\n",
     "from functools import wraps\n",
     "from dataclasses import dataclass\n",
     "from fasthtml.common import *\n",
     "from fasthtml.jupyter import JupyUvi, HTMX\n",
     "import fastlite as fl\n",
     "import fastcore.all as fc\n",
-    "from meme_games.utils import *"
+    "from meme_games.common.utils import *"
    ]
   },
   {
@@ -31,6 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# | export\n",
     "@dataclass\n",
     "class User:\n",
@@ -39,13 +41,15 @@
     "    filename: Optional[str] = None\n",
     "\n",
     "    async def set_picture(self, file: UploadFile, content_path='./user-content'):\n",
-    "        fname = self.uid + '.'+file.filename.split('.')[-1]\n",
+    "        self.reset_picture(content_path)\n",
+    "        fname = f\"{self.uid}_{time.time()}.{file.filename.split('.')[-1]}\"\n",
     "        dir = Path(content_path)\n",
     "        dir.mkdir(parents=True, exist_ok=True)\n",
     "        with open(dir/fname, 'wb') as f: f.write(await file.read())\n",
     "        self.filename = str(fname)\n",
     "\n",
     "    def reset_picture(self, content_path='./user-content'):\n",
+    "        if not self.filename: return\n",
     "        path = Path(content_path)/self.filename\n",
     "        path.unlink(missing_ok=True)\n",
     "        self.filename = None"
@@ -118,14 +122,14 @@
     "\n",
     "def NameSetting():\n",
     "    return Div(\n",
-    "        I('edit', cls=\"material-icons settings\",),\n",
+    "        I('edit', cls=\"material-icons\"),\n",
     "        Form(Input(type='hidden', name='name'), hx_put='/name', hx_swap='none'),\n",
     "        _=r\"\"\"on click get prompt('Enter your name')\n",
     "                 if it != null then if it.trim() != \"\" then set x to it\n",
     "                 make RegExp from '\\\\s+', 'g' called myregx\n",
     "                 set x to x.replace(myregx, ' ').trim() then log x\n",
     "                 put x into @value of <form input/> in me then trigger submit on <form/> in me\n",
-    "                 \"\"\")"
+    "                 \"\"\", cls='controls')"
    ]
   },
   {
@@ -147,13 +151,7 @@
    "source": [
     "hdrs = [\n",
     "    Script(src=\"https://unpkg.com/hyperscript.org@0.9.13\"),\n",
-    "    Link(rel=\"stylesheet\", href=\"https://fonts.googleapis.com/icon?family=Material+Icons\"),\n",
-    "    Style('''\n",
-    "          .settings:hover {\n",
-    "              background-color: lightgreen;\n",
-    "              cursor: pointer;\n",
-    "          }\n",
-    "          ''')\n",
+    "    Link(rel=\"stylesheet\", href=\"https://fonts.googleapis.com/icon?family=Material+Icons\")\n",
     "]\n",
     "app, rt = fast_app(pico=False, before=bware, hdrs=hdrs)"
    ]
