--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -43,6 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# | export\n",
     "\n",
     "@dataclass\n",
@@ -55,7 +56,9 @@
     "\n",
     "    def __getattr__(self, name): return getattr(self.user, name)\n",
     "    def spectate(self): self.is_player = False\n",
-    "    def play(self): self.is_player = True\n",
+    "    def play(self): \n",
+    "        self.joined_at = dt.datetime.now()\n",
+    "        self.is_player = True\n",
     "    def connect(self, ws: FunctionType): self.ws = ws\n",
     "    def disconnect(self): self.ws = None\n",
     "    def add_score(self, score: int): self.score += score\n",
