--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -91,6 +91,10 @@
     "        if self.host.uid not in self.members:\n",
     "            self.members[self.host.uid] = self.host\n",
     "\n",
+    "    def sorted_members(self):\n",
+    "        for m in sorted(self.members.values(),\n",
+    "                        key=lambda m: m.joined_at): yield m\n",
+    "\n",
     "    @classmethod\n",
     "    def create_member(cls, user: User, ws: FunctionType = None, **kwargs):\n",
     "        return BaseLobbyMember(user, ws=ws, **kwargs)\n",
@@ -164,6 +168,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
+    "def is_player(u: BaseLobbyMember|User): return isinstance(u, BaseLobbyMember) and u.is_player"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def lobby_beforeware(manager: LobbyManager, skip=None):\n",
+    "    '''Makes sure that request always contains valid user'''\n",
+    "    def before(req: Request):\n",
+    "        u: User = req.state.user\n",
+    "        path_lobby_id = req.path_params.get('lobby_id')\n",
+    "        if path_lobby_id: req.session['lobby_id'] = path_lobby_id\n",
+    "        lobby: Lobby = manager.get_lobby(req.session.get(\"lobby_id\"))\n",
+    "        if not lobby: raise HTTPException(404, 'Lobby not found')\n",
+    "        req.state.lobby = lobby\n",
+    "        \n",
+    "    return Beforeware(before, skip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "db = init_db()\n",
     "user_manager = UserManager(db)\n",
     "user = user_manager.create()\n",
@@ -193,10 +227,10 @@
    "outputs": [],
    "source": [
     "# | export\n",
-    "def Members(lobby: BaseLobby):\n",
+    "def Members(r: User|BaseLobbyMember, lobby: Lobby):\n",
     "    return Table(\n",
     "        Tr(Th('Name'), Th('id'), Th('Is connected')),\n",
-    "        *[Tr(Td(UserName(member.user)), Td(member.uid), Td(member.is_connected)) for member in lobby.members.values()],\n",
+    "        *[Tr(Td(UserName(r.user, member.user)), Td(member.uid), Td(member.is_connected)) for member in lobby.sorted_members()],\n",
     "        id='members'\n",
     "    )"
    ]
@@ -204,9 +238,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
