--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -116,20 +116,14 @@
    "source": [
     "# | export\n",
     "\n",
-    "def UserName(u: User, is_connected=True, cls='username', **kwargs):\n",
+    "def UserName(r: User, u: User, is_connected=True, cls='username', **kwargs):\n",
     "    cls += ' muted' if not is_connected else ''\n",
-    "    return Span(u.name, dt_user = u.uid, cls=cls, **kwargs, hx_swap_oob=f\"outerHTML:span[dt-user='{u.uid}']\")\n",
+    "    return Span(B(u.name) if r.uid==u.uid else u.name, dt_username = u.uid, cls=cls, **kwargs, hx_swap_oob=f\"outerHTML:span[dt-username='{u.uid}']\")\n",
     "\n",
     "def NameSetting():\n",
     "    return Div(\n",
-    "        I('edit', cls=\"material-icons\"),\n",
-    "        Form(Input(type='hidden', name='name'), hx_put='/name', hx_swap='none'),\n",
-    "        _=r\"\"\"on click get prompt('Enter your name')\n",
-    "                 if it != null then if it.trim() != \"\" then set x to it\n",
-    "                 make RegExp from '\\\\s+', 'g' called myregx\n",
-    "                 set x to x.replace(myregx, ' ').trim() then log x\n",
-    "                 put x into @value of <form input/> in me then trigger submit on <form/> in me\n",
-    "                 \"\"\", cls='controls')"
+    "        I('edit', cls=\"material-icons\", hx_put='/name', hx_swap='none', hx_prompt='Enter your name'),\n",
+    "        cls='controls')"
    ]
   },
   {
@@ -208,9 +202,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
