movable labels (WIP)

--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -43,14 +43,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# | export\n",
     "\n",
     "@dataclass\n",
     "class BaseLobbyMember:\n",
     "    user: User\n",
     "    is_player: bool = False\n",
-    "    ws: Optional[FunctionType] = None\n",
+    "    send: Optional[FunctionType] = None\n",
+    "    ws: Optional[WebSocket] = None\n",
     "    joined_at: dt.datetime = field(default_factory=dt.datetime.now)\n",
     "    score: int = 0\n",
     "\n",
@@ -59,14 +59,16 @@
     "    def play(self): \n",
     "        self.joined_at = dt.datetime.now()\n",
     "        self.is_player = True\n",
-    "    def connect(self, ws: FunctionType): self.ws = ws\n",
-    "    def disconnect(self): self.ws = None\n",
+    "    def connect(self, send: FunctionType, ws: Optional[WebSocket]=None): self.send, self.ws = send, ws\n",
+    "    def disconnect(self): self.send, self.ws = None, None\n",
     "    def add_score(self, score: int): self.score += score\n",
     "    def reset_score(self): self.score = 0\n",
     "    def sync_user(self, u: User): self.user = u\n",
     "\n",
     "    @property\n",
-    "    def is_connected(self): return self.ws is not None"
+    "    def is_connected(self): return self.send is not None\n",
+    "    \n",
+    "    def __eq__(self, other: Union[User, 'BaseLobbyMember']): return self.uid == other.uid"
    ]
   },
   {
@@ -96,12 +98,12 @@
     "                        key=lambda m: m.joined_at): yield m\n",
     "\n",
     "    @classmethod\n",
-    "    def create_member(cls, user: User, ws: FunctionType = None, **kwargs):\n",
-    "        return BaseLobbyMember(user, ws=ws, **kwargs)\n",
+    "    def create_member(cls, user: User, send: FunctionType = None, **kwargs):\n",
+    "        return BaseLobbyMember(user, send=send, **kwargs)\n",
     "    \n",
-    "    def add_member(self, user: User, ws: FunctionType = None, **kwargs):\n",
+    "    def add_member(self, user: User, send: FunctionType = None, **kwargs):\n",
     "        self.last_active = dt.datetime.now()\n",
-    "        m = self.create_member(user, ws=ws, **kwargs)\n",
+    "        m = self.create_member(user, send=send, **kwargs)\n",
     "        self.members[user.uid] = m\n",
     "        return m\n",
     "\n",
