--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -52,7 +52,9 @@
     "        if not self.filename: return\n",
     "        path = Path(content_path)/self.filename\n",
     "        path.unlink(missing_ok=True)\n",
-    "        self.filename = None"
+    "        self.filename = None\n",
+    "        \n",
+    "    def __eq__(self, value: 'User'): return self.uid == value.uid"
    ]
   },
   {
@@ -118,7 +120,7 @@
     "\n",
     "def UserName(r: User, u: User, is_connected=True, cls='username', **kwargs):\n",
     "    cls += ' muted' if not is_connected else ''\n",
-    "    return Span(B(u.name) if r.uid==u.uid else u.name, dt_username = u.uid, cls=cls, **kwargs, hx_swap_oob=f\"outerHTML:span[dt-username='{u.uid}']\")\n",
+    "    return Span(B(u.name) if r==u else u.name, dt_username = u.uid, cls=cls, **kwargs, hx_swap_oob=f\"outerHTML:span[dt-username='{u.uid}']\")\n",
     "\n",
     "def NameSetting():\n",
     "    return Div(\n",
