lower debounce, avatar deletetion

--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -120,12 +120,7 @@
     "\n",
     "def UserName(r: User, u: User, is_connected=True, cls='username', **kwargs):\n",
     "    cls += ' muted' if not is_connected else ''\n",
-    "    return Span(B(u.name) if r==u else u.name, dt_username = u.uid, cls=cls, **kwargs, hx_swap_oob=f\"outerHTML:span[dt-username='{u.uid}']\")\n",
-    "\n",
-    "def NameSetting():\n",
-    "    return Div(\n",
-    "        I('edit', cls=\"material-icons\", hx_put='/name', hx_swap='none', hx_prompt='Enter your name'),\n",
-    "        cls='controls')"
+    "    return Span(B(u.name) if r==u else u.name, dt_username = u.uid, cls=cls, **kwargs, hx_swap_oob=f\"outerHTML:span[dt-username='{u.uid}']\")"
    ]
   },
   {
