--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -137,6 +137,7 @@
     "\n",
     "class LobbyManager(Generic[TLobby]):\n",
     "    lobby_lifetime = dt.timedelta(days=1)\n",
+    "    lobby_limit = 2\n",
     "\n",
     "    def __init__(self):\n",
     "        self.lobbies = {}\n",
@@ -159,8 +160,9 @@
     "\n",
     "    def get_or_create(self, u: User, id: Optional[str] = None, lobby_cls: TLobby = BaseLobby) -> tuple[Lobby, bool]:\n",
     "        '''Returns the lobby if it exists, otherwise creates one if id was valid. Returns (lobby, created)'''\n",
-    "        if not id or not id.isascii(): raise HTTPException(400, 'Invalid lobby id') \n",
+    "        if not id or not id.isascii(): raise HTTPException(400, 'Invalid lobby id, must be ascii') \n",
     "        if lobby := self.get_lobby(id, lobby_cls): return lobby, False\n",
+    "        if len(self.lobbies) >= self.lobby_limit: raise HTTPException(400, 'Too many lobbies, wait until some are finished') \n",
     "        return self.create_lobby(u, lobby_cls, id), True"
    ]
   },
