persistent avatar changes

--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -140,7 +140,7 @@
     "    lobby_limit = 50\n",
     "\n",
     "    def __init__(self):\n",
-    "        self.lobbies = {}\n",
+    "        self.lobbies: dict[str, TLobby] = {}\n",
     "\n",
     "    def __repr__(self): return f'{self.__class__.__name__}(active_lobbies={len(self.lobbies)})'\n",
     "\n",
@@ -163,7 +163,12 @@
     "        if not id or not id.isascii(): raise HTTPException(400, 'Invalid lobby id, must be ascii') \n",
     "        if lobby := self.get_lobby(id, lobby_cls): return lobby, False\n",
     "        if len(self.lobbies) >= self.lobby_limit: raise HTTPException(400, 'Too many lobbies, wait until some are finished') \n",
-    "        return self.create_lobby(u, lobby_cls, id), True"
+    "        return self.create_lobby(u, lobby_cls, id), True\n",
+    "    \n",
+    "    def sync_user_data(self, u: User):\n",
+    "        for lobby in self.lobbies.values():\n",
+    "            m: BaseLobbyMember = lobby.members.get(u.uid)\n",
+    "            if m: m.sync_user(u)"
    ]
   },
   {
@@ -248,7 +253,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.13.1"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
