--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -136,7 +136,7 @@
     "TLobby = TypeVar('TLobby', bound=BaseLobby)\n",
     "\n",
     "class LobbyManager(Generic[TLobby]):\n",
-    "    lobby_lifetime = dt.timedelta(days=1)\n",
+    "    lobby_lifetime = dt.timedelta(hours=5)\n",
     "    lobby_limit = 50\n",
     "\n",
     "    def __init__(self):\n",
