--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -189,7 +189,7 @@
    "source": [
     "#| export\n",
     "def lobby_beforeware(manager: LobbyManager, skip=None):\n",
-    "    '''Makes sure that request always contains valid user'''\n",
+    "    '''Makes sure that request always contains valid lobby'''\n",
     "    def before(req: Request):\n",
     "        u: User = req.state.user\n",
     "        path_lobby_id = req.path_params.get('lobby_id')\n",
@@ -247,13 +247,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.12.4"
   }
  },
  "nbformat": 4,
