--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -120,7 +120,7 @@
     "\n",
     "def UserName(r: User, u: User, is_connected=True, cls='username', **kwargs):\n",
     "    cls += ' muted' if not is_connected else ''\n",
-    "    return Span(B(u.name) if r==u else u.name, dt_username = u.uid, cls=cls, **kwargs, hx_swap_oob=f\"outerHTML:span[dt-username='{u.uid}']\")"
+    "    return Span(B(u.name) if r==u else u.name, data_username = u.uid, cls=cls, **kwargs, hx_swap_oob=f\"outerHTML:span[data-username='{u.uid}']\")"
    ]
   },
   {
@@ -199,13 +199,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.13.1"
   }
  },
  "nbformat": 4,
