--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -23,7 +23,8 @@
     "from fasthtml.jupyter import JupyUvi, HTMX\n",
     "import fastlite as fl\n",
     "import fastcore.all as fc\n",
-    "from meme_games.common.utils import *"
+    "from meme_games.common.utils import *\n",
+    "from meme_games.common.database import *"
    ]
   },
   {
@@ -35,7 +36,7 @@
     "\n",
     "# | export\n",
     "@dataclass\n",
-    "class User:\n",
+    "class User(Model):\n",
     "    uid: str\n",
     "    name: str\n",
     "    filename: Optional[str] = None\n",
@@ -64,23 +65,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "@fc.delegates(Database)\n",
-    "def init_db(filename_or_conn=':memory:', **kwargs):\n",
-    "    db = Database(filename_or_conn, **kwargs)\n",
-    "    db.create(User, pk='uid', transform=True)\n",
-    "    db.t.user.cls = User\n",
-    "    return db"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
     "class UserManager(DataManager):\n",
-    "    def __post_init__(self): self.users: fl.Table = self.db.t.user\n",
+    "    def _set_tables(self): \n",
+    "        self.db.create(User, pk='uid', transform=True)\n",
+    "        self.users: fl.Table = self.db.t.user\n",
     "    \n",
     "    def create(self, uid: str=None, name: str = 'null'):\n",
     "        u = User(uid or random_id(), name)\n",
@@ -145,17 +133,6 @@
     "    Link(rel=\"stylesheet\", href=\"https://fonts.googleapis.com/icon?family=Material+Icons\")\n",
     "]\n",
     "app, rt = fast_app(pico=False, before=bware, hdrs=hdrs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@rt\n",
-    "def index(req: Request):\n",
-    "    return Titled(f\"Hello {req.state.user.name}!\", NameSetting())"
    ]
   },
   {
