[no-deploy] WIP, lobby service

--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -69,6 +69,7 @@
     "    def _set_tables(self): \n",
     "        self.db.create(User, pk='uid', transform=True)\n",
     "        self.users: fl.Table = self.db.t.user\n",
+    "        return self.users\n",
     "    \n",
     "    def create(self, uid: str=None, name: str = 'null'):\n",
     "        u = User(uid or random_id(), name)\n",
@@ -176,9 +177,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
