--- a/notebooks/lobby.ipynb
+++ b/notebooks/lobby.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "class MemberManager(DataManager[LobbyMember]):\n",
+    "\n",
+    "    def __init__(self, db, user_manager: UserManager):\n",
+    "        self.um, self.users = user_manager, user_manager.users\n",
+    "        super().__init__(db)\n",
+    "\n",
+    "    def _set_tables(self):\n",
+    "        self.members: fl.Table = self.db.t.members.create(**LobbyMember.columns(), pk='id',\n",
+    "                                                          transform=True, if_not_exists=True)\n",
+    "        self.members.add_foreign_key('user_uid', 'user', 'uid')\n",
+    "        self.members.cls = LobbyMember\n",
+    "        return self.members\n",
+    "        \n",
+    "\n",
+    "    def update(self, member: LobbyMember):\n",
+    "        self.um.update(member.user)\n",
+    "        return super().update(member)\n",
+    "\n",
+    "    def get_all(self, lobby_id: str) -> list[LobbyMember]:\n",
+    "        cols = self.members.c\n",
+    "        qry = f\"\"\"select {mk_aliases(LobbyMember, self.members)},\n",
+    "                  {mk_aliases(User, self.users)}\n",
+    "                  from {self.members} join {self.users}\n",
+    "                  on {cols.user_uid} = {self.users.c.uid} where {cols.lobby_id} = ?\"\"\"\n",
+    "        return list(fc.maps(cols2dict, self._to_member, self.db.q(qry, [lobby_id])))\n",
+    "\n",
+    "    def _to_member(self, d: dict):\n",
+    "        m, u = (globals()[k](**v) for k, v in d.items())\n",
+    "        if isinstance(m, User): m, u = u, m\n",
+    "        m.user = u\n",
+    "        return m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = init_db()\n",
+    "um = UserManager(db)\n",
+    "mm = MemberManager(db, um)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LobbyMember(user=User(uid='wtgus', name='null', filename='hi'), user_uid='wtgus', lobby_id=None, is_player=False, is_host_=False, joined_at=datetime.datetime(2025, 1, 18, 18, 28, 36, 823117), score=0, id='ap3wdbvs', send=None, ws=None)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cols = LobbyMember(um.create())\n",
+    "cols = mm.insert(cols)\n",
+    "cols.user.filename = 'hi'\n",
+    "mm.update(cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,13 +174,15 @@
     "class Lobby(Model):\n",
     "    _ignore = ('members', 'host')\n",
     "    \n",
-    "    id: str\n",
+    "    id: str = field(default_factory=random_id)\n",
     "    host: Optional[LobbyMember] = None\n",
     "    members: dict[str, LobbyMember] = field(default_factory=dict)\n",
     "    last_active: dt.datetime = field(default_factory=dt.datetime.now)\n",
     "\n",
     "    def __post_init__(self):\n",
     "        if self.host: self.host_uid = self.host.uid\n",
+    "        if isinstance(self.last_active, str): \n",
+    "            self.last_active = dt.datetime.fromisoformat(self.last_active)\n",
     "\n",
     "    def sorted_members(self):\n",
     "        for m in sorted(self.members.values(), key=lambda m: m.joined_at): yield m\n",
@@ -136,175 +212,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# | export\n",
-    "class MemberRepo(DataManager):\n",
-    "\n",
-    "    def __init__(self, db, user_manager: UserManager):\n",
-    "        self.um, self.users = user_manager, user_manager.users\n",
-    "        super().__init__(db)\n",
-    "\n",
-    "    def _set_tables(self):\n",
-    "        self.members = self.db.t.members.create(**LobbyMember.columns(), pk='id')\n",
-    "        self.members.add_foreign_key('user_uid', 'user', 'uid')\n",
-    "        self.members.cls = LobbyMember\n",
-    "\n",
-    "    def insert(self, member: LobbyMember): self.members.insert(member); return member\n",
-    "    def update(self, member: LobbyMember): self.members.update(member); return member\n",
-    "    def get(self, lobby_id: str): \n",
-    "        m = self.members.c\n",
-    "        qry = f\"\"\"select {mk_aliases(LobbyMember, self.members)},\n",
-    "                  {mk_aliases(User, self.users)}\n",
-    "                  from {self.members} join {self.users} \n",
-    "                  on {m.user_uid} = {self.users.c.uid} where {m.lobby_id} = ?\"\"\"\n",
-    "        return list(fc.maps(cols2dict, self._to_member, self.db.q(qry, [lobby_id])))\n",
-    "        \n",
-    "    def _to_member(self, d: dict):\n",
-    "        m, u = (globals()[k](**v) for k,v in d.items())\n",
-    "        if isinstance(m, User): m,u = u,m\n",
-    "        m.user = u\n",
-    "        return m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
     "\n",
-    "class LobbyRepo(DataManager):\n",
+    "class LobbyManager(DataManager[Lobby]):\n",
+    "    \n",
+    "    def __init__(self, db, member_manager: MemberManager):\n",
+    "        self.mm = member_manager\n",
+    "        super().__init__(db)\n",
+    "    \n",
     "    def _set_tables(self):\n",
-    "        self.lobbies = self.db.t.lobbies.create(**Lobby.columns(), pk='id')\n",
+    "        self.lobbies: fl.Table = self.db.t.lobbies.create(**Lobby.columns(), pk='id',\n",
+    "                                                          transform=True, if_not_exists=True)\n",
     "        self.lobbies.cls = Lobby\n",
-    "        \n",
-    "    def insert(self, lobby: Lobby):\n",
-    "        pass"
+    "        return self.lobbies\n",
+    "    \n",
+    "    def update(self, lobby: Lobby):\n",
+    "        self.mm.upsert_all(lobby.members.values())\n",
+    "        return super().update(lobby)\n",
+    "\n",
+    "    def get(self, id: str) -> Lobby:\n",
+    "        if id not in self.lobbies: return\n",
+    "        lobby = self.lobbies.get(id)\n",
+    "        lobby.members = {m.user_uid:m for m in self.mm.get_all(id)}\n",
+    "        hosts = [m for m in lobby.members.values() if m.is_host]\n",
+    "        if hosts: lobby.host = hosts[0]\n",
+    "        return lobby\n",
+    "    \n",
+    "    def ids(self) ->list[str]: return [el['id'] for el in self.lobbies(select='id', as_cls=False)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db = init_db()\n",
-    "user_man = UserManager(db)\n",
-    "m_repo = MemberRepo(db, user_man)\n",
-    "repo = LobbyRepo(db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LobbyMember(user=User(uid='mc3ix', name='null', filename=UNSET), user_uid='mc3ix', lobby_id=123, is_player=False, is_host_=False, joined_at=datetime.datetime(2025, 1, 18, 5, 24, 17, 198849), score=0, id='woghxvjw', send=None, ws=None)"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lobby = Lobby(123)\n",
-    "m = lobby.create_member(user_man.create())\n",
-    "m_repo.insert(m)\n",
-    "m = lobby.create_member(user_man.create())\n",
-    "m_repo.insert(m)\n",
-    "m = lobby.create_member(user_man.create())\n",
-    "m_repo.insert(m)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[LobbyMember(user=User(uid='o18h3', name='null', filename=None), user_uid='o18h3', lobby_id='123', is_player=0, is_host_=0, joined_at=datetime.datetime(2025, 1, 18, 5, 24, 17, 197849), score=0, id='z2fqv2m3', send=None, ws=None),\n",
-       " LobbyMember(user=User(uid='1zgd9', name='null', filename=None), user_uid='1zgd9', lobby_id='123', is_player=0, is_host_=0, joined_at=datetime.datetime(2025, 1, 18, 5, 24, 17, 198849), score=0, id='btuf7mwr', send=None, ws=None),\n",
-       " LobbyMember(user=User(uid='mc3ix', name='null', filename=None), user_uid='mc3ix', lobby_id='123', is_player=0, is_host_=0, joined_at=datetime.datetime(2025, 1, 18, 5, 24, 17, 198849), score=0, id='woghxvjw', send=None, ws=None)]"
+       "Lobby(id='pp04o', host=LobbyMember(user=User(uid='wsror', name='null', filename=None), user_uid='wsror', lobby_id='pp04o', is_player=0, is_host_=1, joined_at=datetime.datetime(2025, 1, 18, 18, 28, 36, 894165), score=0, id='w1wogri8', send=None, ws=None), members={'fihid': LobbyMember(user=User(uid='fihid', name='null', filename=None), user_uid='fihid', lobby_id='pp04o', is_player=0, is_host_=0, joined_at=datetime.datetime(2025, 1, 18, 18, 28, 36, 894165), score=0, id='18b8tciq', send=None, ws=None), 'wsror': LobbyMember(user=User(uid='wsror', name='null', filename=None), user_uid='wsror', lobby_id='pp04o', is_player=0, is_host_=1, joined_at=datetime.datetime(2025, 1, 18, 18, 28, 36, 894165), score=0, id='w1wogri8', send=None, ws=None)}, last_active=datetime.datetime(2025, 1, 18, 18, 28, 36, 894165))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m_repo.get(123)"
+    "lm = LobbyManager(db, mm)\n",
+    "l = lm.insert(Lobby())\n",
+    "l.create_member(um.create())\n",
+    "m = l.create_member(um.create())\n",
+    "l.set_host(m)\n",
+    "lm.update(l)\n",
+    "lm.get(l.id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ks = list(m_repo.get(123)[0].keys())\n",
-    "k = ks[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "__main__.LobbyMember"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "globals().get(k.split('.')[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# | export\n",
     "\n",
-    "class LobbyManager:\n",
+    "class LobbyService:\n",
     "    lobby_lifetime = dt.timedelta(hours=5)\n",
     "    lobby_limit = 50\n",
     "\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, lobby_manager: LobbyManager):\n",
+    "        self.lm = lobby_manager\n",
     "        self.lobbies: dict[str, Lobby] = {}\n",
     "\n",
     "    def __repr__(self): return f'{self.__class__.__name__}(active_lobbies={len(self.lobbies)})'\n",
     "\n",
     "    def create_lobby(self, u: User, lobby_id: Optional[str] = None):\n",
     "        lobby_id = lobby_id or random_id()\n",
-    "        while lobby_id in self.lobbies: lobby_id = random_id()\n",
-    "        lobby = Lobby.new(lobby_id, u)\n",
+    "        ids = list(self.lobbies) + self.lm.ids()\n",
+    "        while lobby_id in ids: lobby_id = random_id()\n",
+    "        lobby = Lobby(lobby_id, u)\n",
     "        self.lobbies[lobby_id] = lobby\n",
+    "        self.lm.insert(lobby)\n",
     "        return lobby\n",
     "\n",
     "    def get_lobby(self, id: Optional[str] = None) -> Optional[Lobby]:\n",
     "        lobby = self.lobbies.get(id)\n",
     "        if lobby: return lobby\n",
+    "        return self.lm.get(id)\n",
     "    \n",
-    "    def delete_lobby(self, id: str): self.lobbies.pop(id)\n",
+    "    def delete_lobby(self, id: str): \n",
+    "        self.lobbies.pop(id)\n",
+    "        self.lm.delete(id)\n",
     "\n",
     "    def get_or_create(self, u: User, id: Optional[str] = None) -> tuple[Lobby, bool]:\n",
     "        '''Returns the lobby if it exists, otherwise creates one if id was valid. Returns (lobby, created)'''\n",
@@ -317,6 +318,60 @@
     "        for lobby in self.lobbies.values():\n",
     "            m: LobbyMember = lobby.members.get(u.uid)\n",
     "            if m: m.sync_user(u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls = LobbyService(lm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'g0jjj': Lobby(id='g0jjj', host=User(uid='8716t', name='null', filename=UNSET), members={}, last_active=datetime.datetime(2025, 1, 18, 18, 28, 38, 957228)),\n",
+       " 'bvocu': Lobby(id='bvocu', host=User(uid=1, name='null', filename=UNSET), members={}, last_active=datetime.datetime(2025, 1, 18, 18, 29, 0, 44983)),\n",
+       " 1: Lobby(id=1, host=User(uid='vp53x', name='null', filename=UNSET), members={}, last_active=datetime.datetime(2025, 1, 18, 18, 29, 6, 88607))}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls.create_lobby(um.create(), 1)\n",
+    "ls.lobbies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'g0jjj': Lobby(id='g0jjj', host=User(uid='8716t', name='null', filename=UNSET), members={}, last_active=datetime.datetime(2025, 1, 18, 18, 28, 38, 957228)),\n",
+       " 'bvocu': Lobby(id='bvocu', host=User(uid=1, name='null', filename=UNSET), members={}, last_active=datetime.datetime(2025, 1, 18, 18, 29, 0, 44983))}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls.delete_lobby(1)\n",
+    "ls.lobbies"
    ]
   },
   {
@@ -395,9 +450,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
