--- a/notebooks/user.ipynb
+++ b/notebooks/user.ipynb
@@ -177,13 +177,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.12.4"
   }
  },
  "nbformat": 4,
